* c-common.h (IF_COND): Added documentation. 	(THEN_CLAUSE): Likewise. 	(ELSE_CLAUSE): Likewise. 	(WHILE_COND): Likewise. 	(WHILE_BODY): Likewise. 	(DO_COND): Likewise. 	(DO_BODY): Likewise. 	(RETURN_EXPR): Likewise. 	(EXPR_STMT_EXPR): Likewise. 	(FOR_INIT_STMT): Likewise. 	(FOR_COND): Likewise. 	(FOR_EXPR): Likewise. 	(FOR_BODY): Likewise. 	(SWITCH_COND): Likewise. 	(SWITCH_BODY): Likewise. 	(CASE_LOW): Likewise. 	(CASE_HIGH): Likewise. 	(GOTO_DESTINATION): Likewise. 	(COMPOUND_BODY): Likewise. 	(ASM_CV_QUAL): Likewise. 	(ASM_STRING): Likewise. 	(ASM_OUTPUTS): Likewise. 	(ASM_INPUTS): Likewise. 	(ASM_CLOBBERS): Likewise. 	(DECL_STMT_DECL): Likewise. 	(STMT_EXPR_STMT): Likewise. 	(LABEL_STMT_LABEL): Likewise.
	* c-common.def: Added documenetion for SRCLOC, EXPR_STMT,
	COMPOUND_STMT, DECL_STMT, IF_STMT, FOR_STMT, WHILE_STMT, DO_STMT,
	RETURN_STMT, BREAK_STMT, CONTINUE_STMT, SWITCH_STMT, GOTO_STMT,
	LABEL_STMT, ASM_STMT, SCOPE_STMT, CASE_LABEL, STMT_EXPR.

	* cp/cp-tree.h (genrtl_try_block): Declare function.
	(genrtl_handler): Likewise.
	(genrtl_catch_block): Likewise.
	(genrtl_ctor_stmt): Likewise.
	(genrtl_subobject): Likewise.
	(genrtl_decl_cleanup): Likewise.
	(genrtl_do_poplevel): Likewise.
	(genrtl_do_pushlevel): Likewise.
	(genrtl_clear_out_block): Likewise.
	(genrtl_goto_stmt): Likewise.
	(genrtl_expr_stmt): Likewise.
	(genrtl_decl_stmt): Likewise.
	(genrtl_if_stmt): Likewise.
	(genrtl_while_stmt): Likewise.
	(genrtl_do_stmt): Likewise.
	(genrtl_return_stmt): Likewise.
	(genrtl_for_stmt): Likewise.
	(genrtl_break_stmt): Likewise.
	(genrtl_continue_stmt): Likewise.
	(genrtl_scope_stmt): Likewise.
	(genrtl_switch_stmt): Likewise.
	(genrtl_case_label): Likewise.
	(genrtl_begin_compound_stmt): Likewise.
	(genrtl_finish_compound_stmt): Likewise.
	(genrtl_compound_stmt): Likewise.
	(genrtl_asm_stmt): Likewise.
	(genrtl_named_return_value): Likewise.
	(genrtl_begin_stmt_expr): Likewise.
	(genrtl_finish_stmt_expr): Likewise.
	(finish_for_stmt): Removed first argument

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,38 @@
+2000-06-19  Benjamin Chelf  <chelf@codesourcery.com>
+
+	* c-common.h (IF_COND): Added documentation.
+	(THEN_CLAUSE): Likewise.
+	(ELSE_CLAUSE): Likewise.
+	(WHILE_COND): Likewise.
+	(WHILE_BODY): Likewise.
+	(DO_COND): Likewise.
+	(DO_BODY): Likewise.
+	(RETURN_EXPR): Likewise.
+	(EXPR_STMT_EXPR): Likewise.
+	(FOR_INIT_STMT): Likewise.
+	(FOR_COND): Likewise.
+	(FOR_EXPR): Likewise.
+	(FOR_BODY): Likewise.
+	(SWITCH_COND): Likewise.
+	(SWITCH_BODY): Likewise.
+	(CASE_LOW): Likewise.
+	(CASE_HIGH): Likewise.
+	(GOTO_DESTINATION): Likewise.
+	(COMPOUND_BODY): Likewise.
+	(ASM_CV_QUAL): Likewise.
+	(ASM_STRING): Likewise.
+	(ASM_OUTPUTS): Likewise.
+	(ASM_INPUTS): Likewise.
+	(ASM_CLOBBERS): Likewise.
+	(DECL_STMT_DECL): Likewise.
+	(STMT_EXPR_STMT): Likewise.
+	(LABEL_STMT_LABEL): Likewise.
+
+	* c-common.def: Added documenetion for SRCLOC, EXPR_STMT, 
+	COMPOUND_STMT, DECL_STMT, IF_STMT, FOR_STMT, WHILE_STMT, DO_STMT, 
+	RETURN_STMT, BREAK_STMT, CONTINUE_STMT, SWITCH_STMT, GOTO_STMT, 
+	LABEL_STMT, ASM_STMT, SCOPE_STMT, CASE_LABEL, STMT_EXPR.
+
 2000-06-19  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* configure.in (--enable-checking): Update --help doc to reflect
