--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jun 19 23:26:40 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* Take REG_INC notes into account.
+
 2000-06-19  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* c-parse.in (undeclared_variable_notice): Moved to c-typeck.c.
