2000-06-20  Bryce McKinlay  <bryce@albatross.co.nz>
	* java/lang/ThreadGroup.java: Merged with classpath.
	* prims.cc (_Jv_RunMain): Don't use ain_group'.
	* gnu/gcj/runtime/FirstThread.java: Remove ThreadGroup constructor
	argument.
	* java/lang/Thread.java (Thread): Bootstrap initial thread from
	ThreadGroup.root if Thread.currentThread is null. Honour the
	ThreadGroup's max priority setting.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34615 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2000-06-20  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* java/lang/ThreadGroup.java: Merged with classpath.
+	* prims.cc (_Jv_RunMain): Don't use `main_group'.
+	* gnu/gcj/runtime/FirstThread.java: Remove ThreadGroup constructor
+	argument.
+	* java/lang/Thread.java (Thread): Bootstrap initial thread from 
+	ThreadGroup.root if Thread.currentThread is null. Honour the 
+	ThreadGroup's max priority setting.
+
 2000-06-18  Tom Tromey  <tromey@cygnus.com>
 
 	* java/lang/natClass.cc (forName): Removed dead code.  Initialize
