2000-06-20  Philipp Thomas  <pthomas@suse.de>
	* config/pa/pa.h (TARGET_SWITCHES): Require binutils 2.10 or later
	for PA 2.0.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34618 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-20  Philipp Thomas  <pthomas@suse.de>
+
+	* config/pa/pa.h(TARGET_SWITCHES): Require binutils 2.10 or later
+	for PA 2.0.
+
 Mon Jun 19 23:26:40 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* Take REG_INC notes into account.
