* rtti.c (get_base_offset): Cope when vbase field is in a base.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34619 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2000-06-20  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* rtti.c (get_base_offset): Cope when vbase field is in a base.
+
+2000-06-20  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* call.c (build_conditional_expr): Use VOID_TYPE_P.
 	* cvt.c (cp_convert_to_pointer): Likewise.
 	(convert_to_void): Likewise.
