--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-20  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.other/dyncast6.C: New test.
+
 2000-06-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/loop-6.c: New test.
