--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-06-20  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* Makefile.in: Remove all references to HOST_INTLLIBS.
+
+	* cpplex.c (parse_name): Don't warn about $ in identifiers if
+	skipping.
+
 2000-06-20  Philipp Thomas  <pthomas@suse.de>
 
 	* config/pa/pa.h(TARGET_SWITCHES): Require binutils 2.10 or later
