--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-20  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* method.c: Don't include hard-reg-set.h.
+
 2000-06-20  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* rtti.c (get_base_offset): Cope when vbase field is in a base.
